pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/Hiringmanager__c.object-meta.xml
<CustomObject>
    <label>Hiringmanager</label>
    <nameField>
        <displayFormat>hr-{0000}</displayFormat>
        <label>hrid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiringmanagers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>