pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>Java developer</fullName>
            </value>
            <value>
                <fullName>Salesforce developer</fullName>
            </value>
            <value>
                <fullName>Manual tester</fullName>
            </value>
            <value>
                <fullName>Automation tester</fullName>
            </value>
            <value>
                <fullName>Dotnet developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>