pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/hremail__c.field-meta.xml
<CustomField>
    <fullName>hremail__c</fullName>
    <label>hremail</label>
    <type>Email</type>
</CustomField>