pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/hrname__c.field-meta.xml
<CustomField>
    <fullName>hrname__c</fullName>
    <label>hrname</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>