pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/hrphone__c.field-meta.xml
<CustomField>
    <fullName>hrphone__c</fullName>
    <label>hrphone</label>
    <type>Phone</type>
</CustomField>