pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/isDeleted__c.field-meta.xml
<CustomField>
    <fullName>isDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleted</label>
    <type>Checkbox</type>
</CustomField>