pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/fields/NumberofLocation__c.field-meta.xml
<CustomField>
    <fullName>NumberofLocation__c</fullName>
    <label>NumberofLocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>