pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/recordTypes/IT_Hiringmanager.recordType-meta.xml
<RecordType>
    <fullName>IT_Hiringmanager</fullName>
    <active>true</active>
    <label>IT Hiringmanager</label>
</RecordType>