pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/recordTypes/Non_IT_Hiringmanager.recordType-meta.xml
<RecordType>
    <fullName>Non_IT_Hiringmanager</fullName>
    <active>true</active>
    <label>Non IT Hiringmanager</label>
</RecordType>