pepsicoprojectinfo/force-app/main/default/objects/Hiringmanager__c/validationRules/hiringmanager_name_cannot_change.validationRule-meta.xml
<ValidationRule>
    <fullName>hiringmanager_name_cannot_change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( hrname__c )</errorConditionFormula>
    <errorDisplayField>hrname__c</errorDisplayField>
    <errorMessage>hrname cannot be changed</errorMessage>
</ValidationRule>